# statdata_analyzer

./: CMakeLists.txt  README.md
include/: statdata.h
src/: main.c  statdata.c
tests/: CMakeLists.txt  system_test.c  unit_tests.c
